Better routes, blog content homepages

--- a/resources/scss/_homepage.scss
+++ b/resources/scss/_homepage.scss
@@ -1,5 +1,9 @@
 .bg {
-    background-color: $about-bg-color;
+	background-color: $about-bg-color;
+}
+
+.main-min-height {
+	min-height: 80vh;
 }
 
 .banner {
