--- a/views/discounts.pug
+++ b/views/discounts.pug
@@ -10,54 +10,55 @@ html( lang="pl" )
 		.container-fluid.bg
 			include elements/nav.pug
 
-			.row.header.m-4.mb-lg-2
-				h1 #{title}
+			.main-min-height
+				.row.header.m-4.mb-lg-2
+					h1 #{title}
 
-			section.discounts
-				.row.m-lg-5
-					.col-lg-4.mb-4
-						.image.discount-1(
-							style="background-image: url(/img/discounts/HardRockCafe.jpg);"
-						)
+				section.discounts
+					.row.m-lg-5
+						.col-lg-4.mb-4
+							.image.discount-1(
+								style="background-image: url(/img/discounts/HardRockCafe.jpg);"
+							)
 
-					.col-lg-4.mb-4
-						.image.discount-2(
-							style="background-image: url(/img/discounts/Starbucks.jpg);"
-						)
+						.col-lg-4.mb-4
+							.image.discount-2(
+								style="background-image: url(/img/discounts/Starbucks.jpg);"
+							)
 
-					.col-lg-4.mb-4
-						.image.discount-3(
-							style="background-image: url(/img/discounts/RK.jpg);"
-						)
+						.col-lg-4.mb-4
+							.image.discount-3(
+								style="background-image: url(/img/discounts/RK.jpg);"
+							)
 
-				.row.m-lg-5
-					.col-lg-4.mb-4
-						.image.discount-4(
-							style="background-image: url(/img/discounts/MammaMia.jpg);"
-						)
+					.row.m-lg-5
+						.col-lg-4.mb-4
+							.image.discount-4(
+								style="background-image: url(/img/discounts/MammaMia.jpg);"
+							)
 
-					.col-lg-4.mb-4
-						.image.discount-5(
-							style="background-image: url(/img/discounts/RetroInk.jpg);"
-						)
+						.col-lg-4.mb-4
+							.image.discount-5(
+								style="background-image: url(/img/discounts/RetroInk.jpg);"
+							)
 
-					.col-lg-4.mb-4
-						.image.discount-6(
-							style="background-image: url(/img/discounts/RIN.jpg);"
-						)
+						.col-lg-4.mb-4
+							.image.discount-6(
+								style="background-image: url(/img/discounts/RIN.jpg);"
+							)
 
-				.row.m-lg-5
-					.offset-2
+					.row.m-lg-5
+						.offset-2
 
-					.col-lg-4.mb-4
-						.image.discount-7(
-							style="background-image: url(/img/discounts/Quattro.jpg);"
-						)
+						.col-lg-4.mb-4
+							.image.discount-7(
+								style="background-image: url(/img/discounts/Quattro.jpg);"
+							)
 
-					.col-lg-4.mb-4
-						.image.discount-8(
-							style="background-image: url(/img/discounts/BarberHouse.jpg);"
-						)
+						.col-lg-4.mb-4
+							.image.discount-8(
+								style="background-image: url(/img/discounts/BarberHouse.jpg);"
+							)
 
 			include elements/footer.pug
 
