--- a/public/style.css
+++ b/public/style.css
@@ -468,7 +468,7 @@ pre {
   .container, .container-sm, .container-md, .container-lg, .container-xl {
     max-width: 1140px; } }
 
-.row {
+.row, .content-list {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
@@ -482,7 +482,7 @@ pre {
     padding-right: 0;
     padding-left: 0; }
 
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .content-list .element, .col,
 .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
 .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
 .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
@@ -571,7 +571,7 @@ pre {
   flex: 0 0 91.66667%;
   max-width: 91.66667%; }
 
-.col-12 {
+.col-12, .content-list .element {
   flex: 0 0 100%;
   max-width: 100%; }
 
@@ -931,7 +931,7 @@ pre {
   .col-lg-5 {
     flex: 0 0 41.66667%;
     max-width: 41.66667%; }
-  .col-lg-6 {
+  .col-lg-6, .content-list .element {
     flex: 0 0 50%;
     max-width: 50%; }
   .col-lg-7 {
@@ -1043,7 +1043,7 @@ pre {
   .col-xl-3 {
     flex: 0 0 25%;
     max-width: 25%; }
-  .col-xl-4 {
+  .col-xl-4, .content-list .element {
     flex: 0 0 33.33333%;
     max-width: 33.33333%; }
   .col-xl-5 {
@@ -3291,7 +3291,7 @@ input[type="button"].btn-block {
     .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
       color: #fff; }
 
-.card {
+.card, .content-list .element .content {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -3301,22 +3301,23 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem; }
-  .card > hr {
+  .card > hr, .content-list .element .content > hr {
     margin-right: 0;
     margin-left: 0; }
-  .card > .list-group {
+  .card > .list-group, .content-list .element .content > .list-group {
     border-top: inherit;
     border-bottom: inherit; }
-    .card > .list-group:first-child {
+    .card > .list-group:first-child, .content-list .element .content > .list-group:first-child {
       border-top-width: 0;
       border-top-left-radius: calc(0.25rem - 1px);
       border-top-right-radius: calc(0.25rem - 1px); }
-    .card > .list-group:last-child {
+    .card > .list-group:last-child, .content-list .element .content > .list-group:last-child {
       border-bottom-width: 0;
       border-bottom-right-radius: calc(0.25rem - 1px);
       border-bottom-left-radius: calc(0.25rem - 1px); }
-  .card > .card-header + .list-group,
-  .card > .list-group + .card-footer {
+  .card > .card-header + .list-group, .content-list .element .content > .card-header + .list-group,
+  .card > .list-group + .card-footer,
+  .content-list .element .content > .list-group + .card-footer {
     border-top: 0; }
 
 .card-body {
@@ -3324,14 +3325,14 @@ input[type="button"].btn-block {
   min-height: 1px;
   padding: 1.25rem; }
 
-.card-title {
+.card-title, .content-list .element .content .card-body h4 {
   margin-bottom: 0.75rem; }
 
 .card-subtitle {
   margin-top: -0.375rem;
   margin-bottom: 0; }
 
-.card-text:last-child {
+.card-text:last-child, .content-list .element .content .card-body p:last-child {
   margin-bottom: 0; }
 
 .card-link:hover {
@@ -3390,7 +3391,7 @@ input[type="button"].btn-block {
   border-bottom-right-radius: calc(0.25rem - 1px);
   border-bottom-left-radius: calc(0.25rem - 1px); }
 
-.card-deck .card {
+.card-deck .card, .card-deck .content-list .element .content, .content-list .element .card-deck .content {
   margin-bottom: 15px; }
 
 @media (min-width: 576px) {
@@ -3399,45 +3400,49 @@ input[type="button"].btn-block {
     flex-flow: row wrap;
     margin-right: -15px;
     margin-left: -15px; }
-    .card-deck .card {
+    .card-deck .card, .card-deck .content-list .element .content, .content-list .element .card-deck .content {
       flex: 1 0 0%;
       margin-right: 15px;
       margin-bottom: 0;
       margin-left: 15px; } }
 
-.card-group > .card {
+.card-group > .card, .content-list .element .card-group > .content {
   margin-bottom: 15px; }
 
 @media (min-width: 576px) {
   .card-group {
     display: flex;
     flex-flow: row wrap; }
-    .card-group > .card {
+    .card-group > .card, .content-list .element .card-group > .content {
       flex: 1 0 0%;
       margin-bottom: 0; }
-      .card-group > .card + .card {
+      .card-group > .card + .card, .content-list .element .card-group > .content + .card, .content-list .element .card-group > .card + .content, .content-list .element .card-group > .content + .content {
         margin-left: 0;
         border-left: 0; }
-      .card-group > .card:not(:last-child) {
+      .card-group > .card:not(:last-child), .content-list .element .card-group > .content:not(:last-child) {
         border-top-right-radius: 0;
         border-bottom-right-radius: 0; }
-        .card-group > .card:not(:last-child) .card-img-top,
-        .card-group > .card:not(:last-child) .card-header {
+        .card-group > .card:not(:last-child) .card-img-top, .content-list .element .card-group > .content:not(:last-child) .card-img-top,
+        .card-group > .card:not(:last-child) .card-header,
+        .content-list .element .card-group > .content:not(:last-child) .card-header {
           border-top-right-radius: 0; }
-        .card-group > .card:not(:last-child) .card-img-bottom,
-        .card-group > .card:not(:last-child) .card-footer {
+        .card-group > .card:not(:last-child) .card-img-bottom, .content-list .element .card-group > .content:not(:last-child) .card-img-bottom,
+        .card-group > .card:not(:last-child) .card-footer,
+        .content-list .element .card-group > .content:not(:last-child) .card-footer {
           border-bottom-right-radius: 0; }
-      .card-group > .card:not(:first-child) {
+      .card-group > .card:not(:first-child), .content-list .element .card-group > .content:not(:first-child) {
         border-top-left-radius: 0;
         border-bottom-left-radius: 0; }
-        .card-group > .card:not(:first-child) .card-img-top,
-        .card-group > .card:not(:first-child) .card-header {
+        .card-group > .card:not(:first-child) .card-img-top, .content-list .element .card-group > .content:not(:first-child) .card-img-top,
+        .card-group > .card:not(:first-child) .card-header,
+        .content-list .element .card-group > .content:not(:first-child) .card-header {
           border-top-left-radius: 0; }
-        .card-group > .card:not(:first-child) .card-img-bottom,
-        .card-group > .card:not(:first-child) .card-footer {
+        .card-group > .card:not(:first-child) .card-img-bottom, .content-list .element .card-group > .content:not(:first-child) .card-img-bottom,
+        .card-group > .card:not(:first-child) .card-footer,
+        .content-list .element .card-group > .content:not(:first-child) .card-footer {
           border-bottom-left-radius: 0; } }
 
-.card-columns .card {
+.card-columns .card, .card-columns .content-list .element .content, .content-list .element .card-columns .content {
   margin-bottom: 0.75rem; }
 
 @media (min-width: 576px) {
@@ -3446,22 +3451,22 @@ input[type="button"].btn-block {
     column-gap: 1.25rem;
     orphans: 1;
     widows: 1; }
-    .card-columns .card {
+    .card-columns .card, .card-columns .content-list .element .content, .content-list .element .card-columns .content {
       display: inline-block;
       width: 100%; } }
 
 .accordion {
   overflow-anchor: none; }
-  .accordion > .card {
+  .accordion > .card, .content-list .element .accordion > .content {
     overflow: hidden; }
-    .accordion > .card:not(:last-of-type) {
+    .accordion > .card:not(:last-of-type), .content-list .element .accordion > .content:not(:last-of-type) {
       border-bottom: 0;
       border-bottom-right-radius: 0;
       border-bottom-left-radius: 0; }
-    .accordion > .card:not(:first-of-type) {
+    .accordion > .card:not(:first-of-type), .content-list .element .accordion > .content:not(:first-of-type) {
       border-top-left-radius: 0;
       border-top-right-radius: 0; }
-    .accordion > .card > .card-header {
+    .accordion > .card > .card-header, .content-list .element .accordion > .content > .card-header {
       border-radius: 0;
       margin-bottom: -1px; }
 
@@ -4810,7 +4815,7 @@ button.bg-dark:focus {
 .rounded-sm {
   border-radius: 0.2rem !important; }
 
-.rounded, .about .text {
+.rounded, .about .text, .content-list .element .content {
   border-radius: 0.25rem !important; }
 
 .rounded-top {
@@ -5589,7 +5594,7 @@ button.bg-dark:focus {
 .mx-1 {
   margin-right: 0.25rem !important; }
 
-.mb-1,
+.mb-1, .content-list .element .content .card-body p,
 .my-1 {
   margin-bottom: 0.25rem !important; }
 
@@ -5605,7 +5610,8 @@ button.bg-dark:focus {
   margin-top: 0.5rem !important; }
 
 .mr-2, footer .iconbox,
-.mx-2 {
+.mx-2,
+.content-list .element .content {
   margin-right: 0.5rem !important; }
 
 .mb-2, .wrapperMobile .grid-element-wrapper,
@@ -5613,7 +5619,8 @@ button.bg-dark:focus {
   margin-bottom: 0.5rem !important; }
 
 .ml-2,
-.mx-2 {
+.mx-2,
+.content-list .element .content {
   margin-left: 0.5rem !important; }
 
 .m-3 {
@@ -5624,7 +5631,8 @@ button.bg-dark:focus {
   margin-top: 1rem !important; }
 
 .mr-3,
-.mx-3 {
+.mx-3,
+.content-list {
   margin-right: 1rem !important; }
 
 .mb-3,
@@ -5632,7 +5640,8 @@ button.bg-dark:focus {
   margin-bottom: 1rem !important; }
 
 .ml-3,
-.mx-3 {
+.mx-3,
+.content-list {
   margin-left: 1rem !important; }
 
 .m-4 {
@@ -5646,7 +5655,7 @@ button.bg-dark:focus {
 .mx-4 {
   margin-right: 1.5rem !important; }
 
-.mb-4,
+.mb-4, .content-list .element,
 .my-4 {
   margin-bottom: 1.5rem !important; }
 
@@ -6486,13 +6495,15 @@ button.bg-dark:focus {
   .my-lg-5 {
     margin-top: 3rem !important; }
   .mr-lg-5,
-  .mx-lg-5 {
+  .mx-lg-5,
+  .content-list {
     margin-right: 3rem !important; }
   .mb-lg-5,
   .my-lg-5 {
     margin-bottom: 3rem !important; }
   .ml-lg-5,
-  .mx-lg-5 {
+  .mx-lg-5,
+  .content-list {
     margin-left: 3rem !important; }
   .p-lg-0 {
     padding: 0 !important; }
@@ -7209,7 +7220,7 @@ nav {
   z-index: 6;
   background-color: #000; }
   .menu img {
-    height: 90px; }
+    height: 12.5vh; }
   .menu .burger {
     width: 45px;
     height: 45px;
@@ -7416,12 +7427,12 @@ footer {
     flex-direction: column;
     display: flex;
     justify-content: center; }
-    .icons .row {
+    .icons .row, .icons .content-list {
       flex-direction: column;
       display: flex;
       justify-content: center;
       height: 100vh; }
-      .icons .row .icon1 {
+      .icons .row .icon1, .icons .content-list .icon1 {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -7429,10 +7440,10 @@ footer {
         margin: 1.5rem 0;
         height: 100%;
         width: 100%; }
-        .icons .row .icon1 i {
+        .icons .row .icon1 i, .icons .content-list .icon1 i {
           font-size: 3rem;
           color: #e49e00; }
-        .icons .row .icon1 h1 {
+        .icons .row .icon1 h1, .icons .content-list .icon1 h1 {
           font-size: 1.5rem; } }
 
 @media screen and (min-width: 768px) {
@@ -7516,13 +7527,13 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center; }
-    .icons .row {
+    .icons .row, .icons .content-list {
       height: 100%;
       flex-direction: row;
       display: flex;
       justify-content: center;
       align-items: center; }
-      .icons .row .icon1 {
+      .icons .row .icon1, .icons .content-list .icon1 {
         flex-direction: column;
         display: flex;
         justify-content: center;
@@ -7530,10 +7541,10 @@ footer {
         margin: 2rem;
         height: 70%;
         width: 40%; }
-        .icons .row .icon1 i {
+        .icons .row .icon1 i, .icons .content-list .icon1 i {
           font-size: 5rem;
           color: #e49e00; }
-        .icons .row .icon1 h1 {
+        .icons .row .icon1 h1, .icons .content-list .icon1 h1 {
           font-size: 2rem; } }
 
 @media screen and (min-width: 1200px) {
@@ -7569,6 +7580,9 @@ footer {
 
 .bg {
   background-color: #080808; }
+
+.main-min-height {
+  min-height: 80vh; }
 
 .banner {
   height: 70vh;
@@ -7772,14 +7786,14 @@ form {
       perspective: 1000px;
       color: #000; }
 
-.icons .row {
+.icons .row, .icons .content-list {
   width: 100%;
   height: 50%; }
-  .icons .row .icon1 {
+  .icons .row .icon1, .icons .content-list .icon1 {
     border: 2px solid #e49e00;
     opacity: 0;
     animation: fade 1s 2s linear forwards; }
-    .icons .row .icon1 a {
+    .icons .row .icon1 a, .icons .content-list .icon1 a {
       align-items: center;
       justify-content: center;
       display: flex;
@@ -7787,19 +7801,19 @@ form {
       filter: brightness(0.5);
       transition: all 0.5s ease-in-out;
       height: 100%; }
-      .icons .row .icon1 a .iconbox2 {
+      .icons .row .icon1 a .iconbox2, .icons .content-list .icon1 a .iconbox2 {
         align-items: center;
         justify-content: center;
         display: flex;
         height: 70%;
         width: 100%;
         text-decoration: none; }
-      .icons .row .icon1 a h1 {
+      .icons .row .icon1 a h1, .icons .content-list .icon1 a h1 {
         height: 30%;
         color: #e49e00;
         text-align: center;
         text-decoration: none; }
-    .icons .row .icon1 a:hover {
+    .icons .row .icon1 a:hover, .icons .content-list .icon1 a:hover {
       filter: brightness(1);
       cursor: pointer;
       text-decoration: none; }
@@ -8059,3 +8073,21 @@ body .articleWrapper {
     min-height: 50vh; }
     body .articleWrapper .text p {
       text-align: center; }
+
+.content-list {
+  opacity: 0;
+  animation: fade 1s 2.5s linear forwards; }
+  .content-list .element a {
+    text-decoration: none; }
+  .content-list .element .content {
+    color: #fff;
+    background-color: #000;
+    transition: background-color 1s; }
+    .content-list .element .content .image {
+      background-size: cover;
+      background-position: center;
+      height: 30vh;
+      border-radius: 3px; }
+    .content-list .element .content:hover {
+      background-color: #0d0d0d;
+      transition: background-color 1s; }
