--- a/resources/scss/blog/_article.scss
+++ b/resources/scss/blog/_article.scss
@@ -1,94 +1,67 @@
 body {
-    h1::selection {
-        background-color: $third-color;
-    }
+	.title::selection,
+	h1::selection,
+	h2::selection,
+	h3::selection,
+	i::selection,
+	p::selection {
+		background-color: $third-color;
+	}
 
-    h2::selection {
-        background-color: $third-color;
-    }
+	.blog-content-wrapper {
+		@extend .container;
+		opacity: 0;
+		animation: fade 1s 2.75s linear forwards;
 
-    h3::selection {
-        background-color: $third-color;
-    }
+		.title {
+			@extend .m-4;
+			@extend .ml-5;
+			@extend .display-4;
+			@extend .font-weight-bold;
+		}
 
-    p::selection {
-        background-color: $third-color;
-    }
+		.authorWrapper {
+			@extend .ml-5;
+			display: flex;
+			justify-content: left;
+			align-items: center;
 
-    i::selection {
-        background-color: $third-color;
-    }
+			img {
+				@extend .rounded-circle;
+				width: 70px;
+				height: 70px;
+				border-width: 5px;
+				border-style: solid;
+				border-color: $third-color;
+			}
 
-    .topBar {
-        height: 10vh;
-        background: $third-color;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+			p {
+				@extend .h4;
+				margin: 0;
+				margin-left: 10px;
+			}
+		}
 
-        h1 {
-            color: $second-color;
-            text-align: center;
-        }
+		.tags {
+			@extend .ml-5;
+			@extend .mt-2;
+			@extend .mb-5;
 
-        img {
-            height: 90%;
-        }
-    }
+			p {
+				font-size: 17.5px;
+			}
+		}
 
-    .articleWrapper {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        width: 80%;
-        margin: 0 auto;
+		.content-wrapper {
+			@extend .mb-5;
 
-
-        .title {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-        }
-
-        .autor {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;
-            height: 10vh;
-            width: 100%;
-
-            .awatar {
-                width: 70px;
-                height: 70px;
-                border-radius: 50px;
-                background: $third-color;
-            }
-        }
-
-        .subtitle {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-
-        .graphic {
-            width: 100%;
-            height: 50vh;
-            background: url(../img/breakfast-1869772_640.jpg) center;
-            background-size: cover;
-        }
-
-        .text {
-            width: 100%;
-            min-height: 50vh;
-
-            p {
-                text-align: center;
-            }
-        }
-    }
+			img {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+				max-width: 80%;
+				max-height: 50vh;
+			}
+		}
+	}
 }
