--- a/views/contact-us.pug
+++ b/views/contact-us.pug
@@ -21,21 +21,25 @@ html( lang="pl" )
 						input#name(
 							type="text"
 							placeholder="Imię i nazwisko"
+							name="name"
 						)
 
 						input#email(
 							type="email"
 							placeholder="E-mail"
+							name="email"
 						)
 
 						input#subject(
 							type="text"
 							placeholder="Temat"
+							name="topic"
 						)
 
 						textarea#body.rounded(
 							rows="5"
 							placeholder="Napisz wiadomość..."
+							name="text"
 						)
 
 						.buttonNote
