--- a/views/about-us.pug
+++ b/views/about-us.pug
@@ -20,12 +20,7 @@ html( lang="pl" )
 							.col-xl-6.col-sm-12
 								.img.rounded(
 									style=`background-image: url(/img/descriptions/${item.image});
-										${index == 0 ?
-											"background-position: center;" :
-											(index == 1 ?
-											"background-position: center; background-size: 75%;" :
-											(index == 8 ?
-											"background-size: 50%;" : "" ))}`
+										${ (index == 0 || index == 1) && "background-position: center;" }`
 								)
 								//- Remove the if statements when photos don't need one-by-one adjusting
 							.col-xl-6.col-sm-12
