--- a/views/contact-us.pug
+++ b/views/contact-us.pug
@@ -96,7 +96,7 @@ html( lang="pl" )
 				#noteModal.modal
 					.modal-content
 						span#closeModal.close &times;
-						p Tego formularza możesz użyć do przesłania nam tytułu utworu, który chcesz posłuchać. Możesz również napisać dedykację, która zostanie odczytana.
+						p Tego formularza możesz użyć do przesłania nam tytułu utworu, którego chcesz posłuchać na przerwie z radiowęzła. Możesz również napisać dedykację, która zostanie odczytana.
 
 			include elements/footer.pug
 
