--- a/resources/scss/_responsive.scss
+++ b/resources/scss/_responsive.scss
@@ -1,448 +1,459 @@
 @include media-sm {
-    .container-fluid {
-        overflow-x: hidden;
-    }
+	.container-fluid {
+		overflow-x: hidden;
+	}
 
-    //homepage
-    .headings {
-        h1 {
-            font-size: 2rem;
-        }
+	//homepage
+	.headings {
+		h1 {
+			font-size: 2rem;
+		}
 
-        h2 {
-            font-size: 1.5rem;
-        }
+		h2 {
+			font-size: 1.5rem;
+		}
 
-        h3 {
-            font-size: 1rem;
-        }
-    }
+		h3 {
+			font-size: 1rem;
+		}
+	}
 
-    nav {
-        display: none;
-    }
+	nav {
+		display: none;
+	}
 
-    .menu {
-        display: flex;
-    }
+	.menu {
+		display: flex;
+	}
 
-    .menu-drop {
-        display: flex;
-    }
+	.menu-drop {
+		display: flex;
+	}
 
-    .bar {
-        height: 15vh;
-    }
+	.bar {
+		height: 15vh;
+	}
 
-    footer {
-        .iconbox {
-            width: 10%;
-        }
+	footer {
 
-        p {
-            font-size: .9rem;
-            width: 90%;
-        }
+		height: calc(10vh - 10px);
+
+		.iconbox {
+			width: 10%;
+		}
+
+		p {
+			font-size: .9rem;
+			width: 90%;
+		}
 
 
-    }
+	}
 
-    .footerHomepage {
-        p {
-            font-size: .7rem;
-        }
-    }
+	.footerHomepage {
+		p {
+			font-size: .7rem;
+		}
+	}
 
-    //aboutus
-    .header {
-        h1 {
-            font-size: 2rem;
-        }
-    }
+	//aboutus
+	.header {
+		h1 {
+			font-size: 2rem;
+		}
+	}
 
-    .about {
-        .img {
-            height: 70vh;
-        }
+	.about {
+		.img {
+			height: 70vh;
+		}
 
-        .text {
-            height: 70vh;
+		.text {
+			height: 70vh;
 
-            h1 {
-                font-size: 1.6rem;
-            }
+			h1 {
+				font-size: 1.6rem;
+			}
 
-            h2 {
-                font-size: 1.4rem;
-            }
+			h2 {
+				font-size: 1.4rem;
+			}
 
-            p {
-                font-size: .8rem;
-            }
-        }
-    }
+			p {
+				font-size: .8rem;
+			}
+		}
+	}
 
-    //discounts
-    .discounts {
-        .image {
-            height: 60vh;
-        }
-    }
+	//discounts
+	.discounts {
+		.image {
+			height: 60vh;
+		}
+	}
 
-    //contact
-    .contact {
-        height: 80vh;
-        box-sizing: border-box;
-        margin: 1rem;
-    }
+	//contact
+	.contact {
+		height: 80vh;
+		box-sizing: border-box;
+		margin: 1rem;
+	}
 
-    form {
-        margin: 1rem;
-        padding: 1rem;
-        width: 100vw;
-        height: 100%;
+	form {
+		margin: 1rem;
+		padding: 1rem;
+		width: 100vw;
+		height: 100%;
 
-        h1 {
-            font-size: 1.5rem;
-            margin: .5rem 0;
-            padding: .5rem 0;
-        }
+		h1 {
+			font-size: 1.5rem;
+			margin: .5rem 0;
+			padding: .5rem 0;
+		}
 
-        input {
-            margin: .5rem 0;
-            padding: .5rem 0;
-        }
+		input {
+			margin: .5rem 0;
+			padding: .5rem 0;
+		}
 
-        ::placeholder {
-            margin: .5rem 0;
-            padding: .5rem 0;
-        }
+		::placeholder {
+			margin: .5rem 0;
+			padding: .5rem 0;
+		}
 
-        textarea {
-            margin: .5rem 0;
-        }
+		textarea {
+			margin: .5rem 0;
+		}
 
-        button {
-            width: 40%;
-            border: 2px solid $second-color;
-            background-color: transparent;
-            color: $second-color;
-            padding: .5rem;
-        }
-    }
+		button {
+			width: 40%;
+			border: 2px solid $second-color;
+			background-color: transparent;
+			color: $second-color;
+			padding: .5rem;
+		}
+	}
 
-    .icons {
-        width: 80%;
-        height: 300vh;
-        margin: 0 auto;
-        flex-direction: column;
-        display: flex;
-        justify-content: center;
+	.icons {
+		width: 80%;
+		height: 300vh;
+		margin: 0 auto;
+		flex-direction: column;
+		display: flex;
+		justify-content: center;
 
-        .row {
-            flex-direction: column;
-            display: flex;
-            justify-content: center;
-            height: 100vh;
+		.row {
+			flex-direction: column;
+			display: flex;
+			justify-content: center;
+			height: 100vh;
 
-            .icon1 {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                margin: 1.5rem 0;
-                height: 100%;
-                width: 100%;
+			.icon1 {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: column;
+				margin: 1.5rem 0;
+				height: 100%;
+				width: 100%;
 
-                i {
-                    font-size: 3rem;
-                    color: $third-color;
-                }
+				i {
+					font-size: 3rem;
+					color: $third-color;
+				}
 
-                h1 {
-                    font-size: 1.5rem;
-                }
-            }
-        }
-    }
+				h1 {
+					font-size: 1.5rem;
+				}
+			}
+		}
+	}
 
 }
 
 @include media-md {
-    //homepage
-    .headings {
-        h1 {
-            font-size: 3rem;
-        }
 
-        h2 {
-            font-size: 2.5rem;
-        }
+	//homepage
+	.headings {
+		h1 {
+			font-size: 3rem;
+		}
 
-        h3 {
-            font-size: 2rem;
-        }
-    }
+		h2 {
+			font-size: 2.5rem;
+		}
 
-    .bar {
-        height: 12.5vh;
-    }
+		h3 {
+			font-size: 2rem;
+		}
+	}
 
-    footer {
+	.bar {
+		height: 12.5vh;
+	}
 
-        .iconbox {
-            width: 5%;
-        }
+	footer {
 
-        p {
-            width: 95%;
-            font-size: 1rem;
-        }
-    }
+		.iconbox {
+			width: 5%;
+		}
 
-    .footerHomepage {
-        p {
-            font-size: 1rem;
-        }
-    }
+		p {
+			width: 95%;
+			font-size: 1rem;
+		}
+	}
 
-    //about
-    .header {
-        h1 {
-            font-size: 3rem;
-        }
-    }
+	.footerHomepage {
+		p {
+			font-size: 1rem;
+		}
+	}
 
-    .about {
+	//about
+	.header {
+		h1 {
+			font-size: 3rem;
+		}
+	}
+
+	.about {
 		.img {
 			height: 80vh;
 		}
+
 		.text {
 			height: 80vh;
 
-            h1 {
-                font-size: 3rem;
-            }
+			h1 {
+				font-size: 3rem;
+			}
 
-            h2 {
-                font-size: 2.5rem;
-            }
+			h2 {
+				font-size: 2.5rem;
+			}
 
-            p {
-                font-size: 1.5rem;
-                padding: 5rem;
-            }
-        }
-    }
+			p {
+				font-size: 1.5rem;
+				padding: 5rem;
+			}
+		}
+	}
 
-    //discounts
-    .discounts {
-        .image {
-            height: 80vh;
-        }
-    }
+	//discounts
+	.discounts {
+		.image {
+			height: 80vh;
+		}
+	}
 
-    //contact
-    .contact {
-        height: 85vh;
-        box-sizing: border-box;
-    }
+	//contact
+	.contact {
+		height: 85vh;
+		box-sizing: border-box;
+	}
 
-    form {
-        margin: 2rem;
-        padding: 2rem;
-        width: 60vh;
-        height: 60vh;
+	form {
+		margin: 2rem;
+		padding: 2rem;
+		width: 60vh;
+		height: 60vh;
 
-        h1 {
-            font-size: 2rem;
-            margin: 1rem 0;
-            padding: 1rem 0;
-        }
+		h1 {
+			font-size: 2rem;
+			margin: 1rem 0;
+			padding: 1rem 0;
+		}
 
-        input {
-            margin: .8rem 0;
-            padding: .8rem 0;
-        }
+		input {
+			margin: .8rem 0;
+			padding: .8rem 0;
+		}
 
-        ::placeholder {
-            margin: .8rem 0;
-            padding: .8rem 0;
-        }
+		::placeholder {
+			margin: .8rem 0;
+			padding: .8rem 0;
+		}
 
-        button {
-            width: 40%;
-            border: 2px solid $second-color;
-            background-color: transparent;
-            color: $second-color;
-            padding: .5rem;
-        }
-    }
+		button {
+			width: 40%;
+			border: 2px solid $second-color;
+			background-color: transparent;
+			color: $second-color;
+			padding: .5rem;
+		}
+	}
 }
 
 @include media-lg {
-    //homepage
-    .headings {
-        h1 {
-            font-size: 5rem;
-        }
 
-        h2 {
-            font-size: 4.5rem;
-        }
+	//homepage
+	.headings {
+		h1 {
+			font-size: 5rem;
+		}
 
-        h3 {
-            font-size: 3rem;
-        }
-    }
+		h2 {
+			font-size: 4.5rem;
+		}
 
-    footer {
-        p {
-            font-size: 1rem;
-        }
+		h3 {
+			font-size: 3rem;
+		}
+	}
 
-        i {
-            font-size: 2rem;
-        }
-    }
+	footer {
+		p {
+			font-size: 1rem;
+		}
 
-    //discounts
-    .discounts {
-        .image {
-            height: 40vh;
-        }
-    }
+		i {
+			font-size: 2rem;
+		}
+	}
 
-    nav {
+	//discounts
+	.discounts {
+		.image {
+			height: 40vh;
+		}
+	}
+
+	nav {
 		height: 15vh;
-        display: flex;
+		display: flex;
 
-        img {
-            height: 12.5vh;
-        }
-    }
+		img {
+			height: 12.5vh;
+		}
+	}
 
-    .menu {
-        display: none;
-    }
+	.menu {
+		display: none;
+	}
 
-    .menu-drop {
-        display: none;
-    }
+	.menu-drop {
+		display: none;
+	}
 
-    .icons {
-        width: 100%;
-        height: 100vh;
-        flex-direction: row;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+	.icons {
+		width: 100%;
+		height: 100vh;
+		flex-direction: row;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
-        .row {
-            height: 100%;
-            flex-direction: row;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+		.row {
+			height: 100%;
+			flex-direction: row;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 
-            .icon1 {
-                flex-direction: column;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin: 2rem;
-                height: 70%;
-                width: 40%;
+			.icon1 {
+				flex-direction: column;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				margin: 2rem;
+				height: 70%;
+				width: 40%;
 
-                i {
-                    font-size: 5rem;
-                    color: $third-color;
-                }
+				i {
+					font-size: 5rem;
+					color: $third-color;
+				}
 
-                h1 {
-                    font-size: 2rem;
-                }
-            }
-        }
-    }
+				h1 {
+					font-size: 2rem;
+				}
+			}
+		}
+	}
 
 }
 
 @include media-xl {
-    //about
-    .header {
-        h1 {
-            font-size: 4rem;
-        }
-    }
 
-    .about {
+	//about
+	.header {
+		h1 {
+			font-size: 4rem;
+		}
+	}
+
+	.about {
 		.img {
-            height: 85vh;
-        }
+			height: 85vh;
+		}
 
-        .text {
+		.text {
 			height: 85vh;
 
-            h1 {
-                font-size: 3rem;
-            }
+			h1 {
+				font-size: 3rem;
+			}
 
-            h2 {
-                font-size: 2.5rem;
-            }
+			h2 {
+				font-size: 2.5rem;
+			}
 
-            p {
-                font-size: 1.3rem;
-                padding: 3rem;
-            }
-        }
-    }
+			p {
+				font-size: 1.3rem;
+				padding: 3rem;
+			}
+		}
+	}
 
-    .discounts {
-        .image {
-            height: 62.5vh;
-        }
-    }
+	.discounts {
+		.image {
+			height: 62.5vh;
+		}
+	}
+
+	.footer {
+		height: calc(6vh - 10px);
+	}
 
 }
 
 @include media-sm-landscape {
-    .bar {
-        height: 15vh;
-    }
+	.bar {
+		height: 15vh;
+	}
 
-    //about
-    .about {
-        .img {
-            height: 150vh;
-        }
+	//about
+	.about {
+		.img {
+			height: 150vh;
+		}
 
-        .text {
-            height: 120vh;
+		.text {
+			height: 120vh;
 
-            h1 {
-                font-size: 1.6rem;
-            }
+			h1 {
+				font-size: 1.6rem;
+			}
 
-            h2 {
-                font-size: 1.4rem;
-            }
+			h2 {
+				font-size: 1.4rem;
+			}
 
-            p {
-                font-size: .8rem;
-            }
-        }
-    }
+			p {
+				font-size: .8rem;
+			}
+		}
+	}
 
-    //discounts
-    .discounts {
-        .image {
-            height: 200vh;
-        }
-    }
+	//discounts
+	.discounts {
+		.image {
+			height: 200vh;
+		}
+	}
 
-    .menu {
-        height: 25vh;
-    }
+	.menu {
+		height: 25vh;
+	}
 }
